fix: align v1 measures with existing measures on v2 endpoints
